syntax = "proto3";

package claims;

service ClaimsService {
  rpc CreateClaim(CreateClaimRequest) returns (CreateClaimResponse);
  rpc CreateClaimForWidget(CreateClaimForWidgetRequest) returns (CreateClaimResponse);
  rpc GetClaim(GetClaimRequest) returns (GetClaimResponse);
  rpc UpdateClaim(UpdateClaimRequest) returns (UpdateClaimResponse);
  rpc DeleteClaim(DeleteClaimRequest) returns (DeleteClaimResponse);
  rpc ListClaims(ListClaimsRequest) returns (ListClaimsResponse);
}

message CreateClaimRequest {
  string identification_number = 1;
  string status = 2;
  string data = 3; // JSON string
  string user_id = 4;
}

message CreateClaimForWidgetRequest {
  string identification_number = 1;
  string status = 2;
  string data = 3; // JSON string
  string tenant_id = 4; // API-Key header equivalent
  string external_user_id = 5; // User-ID header equivalent
}

message CreateClaimResponse {
  string id = 1;
  string identification_number = 2;
  string status = 3;
  string data = 4;
  string user_id = 5;
  string created_at = 6;
  string updated_at = 7;
}

message GetClaimRequest {
  string id = 1;
  string user_id = 2; // Optional - for authorization
  string role = 3; // Optional - for authorization
}

message GetClaimResponse {
  string id = 1;
  string identification_number = 2;
  string status = 3;
  string data = 4;
  string user_id = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UpdateClaimRequest {
  string id = 1;
  string identification_number = 2;
  string status = 3;
  string data = 4;
  string user_id = 5; // Optional - for authorization
  string role = 6; // Optional - for authorization
}

message UpdateClaimResponse {
  string id = 1;
  string identification_number = 2;
  string status = 3;
  string data = 4;
  string user_id = 5;
  string created_at = 6;
  string updated_at = 7;
}

message DeleteClaimRequest {
  string id = 1;
  string user_id = 2; // Optional - for authorization
  string role = 3; // Optional - for authorization
}

message DeleteClaimResponse {
  bool success = 1;
}

message ListClaimsRequest {
  string user_id = 1;
  string role = 2; // Optional - for filtering
  string tenant_id = 3; // Optional - for filtering
}

message ListClaimsResponse {
  repeated Claim claims = 1;
}

message Claim {
  string id = 1;
  string identification_number = 2;
  string status = 3;
  string data = 4;
  string user_id = 5;
  string created_at = 6;
  string updated_at = 7;
}
